--- a/todo-backend/package.json
+++ b/todo-backend/package.json
@@ -4,7 +4,7 @@
   "description": "ToDo List project for learning",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "Janani",
   "license": "ISC",
